Fix overflow-x not working bug in Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 html,
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
 body {
